frame/support/test/tests/derive_no_bound_ui/ord.rs
use frame_support::{EqNoBound, OrdNoBound, PartialEqNoBound};

trait Config {
	type C: Eq;
}

#[derive(PartialEqNoBound, EqNoBound, OrdNoBound)]
struct Foo<T: Config> {
	c: T::C,
}

fn main() {}